[package]
name = "website"
version = "0.1.0"
edition = "2021"

[dependencies]
pulldown-cmark = "0.12"
ratex-layout = "0.1.12"
ratex-parser = "0.1.12"
ratex-svg = { version = "0.1.12", features = ["standalone", "embed-fonts"] }
ratex-types = "0.1.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "fs"] }

[profile.release]
opt-level = 3
